Feature: improve code coverage (#4)
* docs: add readme

* feat: add PaymentController test

* feat: better codecov.yml

* feat: added tests

* feat: added test for json processing exc